Add dataset statistics and Ollama testing script
- Created a new JSON file `test_dataset_stats.json` containing statistics on QA pairs, categories, source files, and length stats for questions, answers, and paragraphs.
- Developed a Python script `test_ollama.py` to verify the connection to the Ollama server and test the functionality of the `llama3.2` model, including response validation and performance timing.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 # RAG System Dependencies
 chromadb==1.1.1
 langchain-chroma==0.2.6
-langchain-google-genai==2.1.12
 langchain-core==0.3.79
 langchain-community==0.3.31
 sentence-transformers==5.1.1
 pandas==2.3.3
 python-dotenv==1.1.1
+requests>=2.32.5
+
+# Local LLM Dependencies (Ollama)
+# Note: Ollama binary must be installed separately
+# Run: ./setup_local_testing.sh for complete setup
 
 # Document Processing Dependencies
 PyPDF2==3.0.1
