--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ chromadb==1.1.1
 langchain-chroma==0.2.6
 langchain-core==0.3.79
 langchain-community==0.3.31
+langchain-google-genai>=1.1.0
 sentence-transformers==5.1.1
 pandas==2.3.3
 python-dotenv==1.1.1
