--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 langchain-text-splitters>=0.2.0
 langchain-huggingface>=0.0.1
 langchain-community>=0.2.0
+langchain-core>=0.2.0
 chromadb>=0.4.0
 sentence-transformers>=2.2.0
+pydantic>=2.0.0
+tqdm>=4.65.0
